<resources>
    <string name="app_name">What the Truck</string>
    <string name="etUsername">Name</string>
    <string name="etPassword">Password</string>
    <string name="Login">Log In</string>
    <string name="tvLoginFailure">Failed to Log In</string>
    <string name="Title">What the Truck!</string>
    <string name="Slogan">The Best Truckin\' Experience of Your Life</string>
    <string name="btnForgotPassword">Forgot Password?</string>
    <string name="forgotPasswordMsg">Enter the email associated with your account and we will send you an email with a link to reset your password</string>
    <string name="text_email">Email</string>
    <string name="btnSendEmail">Send Email</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">What the Truck</string>
    <string name="nav_header_subtitle">Beef</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_help_request">Help Request</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_category_help">Help</string>
    <string name="textName">Name</string>
    <string name="text_address">Address</string>
    <string name="text_company_name">Company</string>
    <string name="label_name">Name:</string>
    <string name="label_company_name">Company:</string>
    <string name="label_address">Address:</string>
    <string name="label_email">Email:</string>
    <string name="text_points">Points</string>
    <string name="label_points">Points:</string>
    <string name="text_name_first">First</string>
    <string name="text_name_last">Last</string>
    <string name="bttnSave">Save Changes</string>
    <string name="label_phone">Phone Number:</string>
    <string name="text_phone">Phone Number</string>
    <string name="text_address_street">Street</string>
    <string name="text_address_street2">Street 2 (optional)</string>
    <string name="text_address_city">City</string>
    <string name="text_address_state">State</string>
    <string name="text_address_zip">Zip Code</string>
    <string name="textPFP">Profile Picture</string>
    <string name="textPrice">Price</string>
    <string name="textItem">Item</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textItemImage">Item Image</string>
    <string name="textItemDescription">Item Description</string>
    <string name="text_cart">Shopping Cart</string>
    <string name="menu_cart">Shopping Cart</string>
    <string name="bttnAdd">+</string>
    <string name="bttnRemove">-</string>
    <string name="text_inCart">In Cart:</string>
</resources>
