<?xml version = "1.0" encoding = "utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view = "http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    card_view:cardCornerRadius = "4dp"
    android:id = "@+id/card_view"
    android:layout_margin = "10dp"
    android:layout_height = "200dp">

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:id="@+id/frameLeft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/textItem"
                card_view:srcCompat="@drawable/default_item" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/frameRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textName"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:text="@string/textPrice"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cost"
                android:text="@string/text_inCart"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp" />

            <Button
                android:id="@+id/bttnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/count"
                android:text="@string/bttnAdd" />

            <Button
                android:id="@+id/bttnRemove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bttnAdd"
                android:text="@string/bttnRemove" />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>