<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3" />

                <ImageView
                    android:id="@+id/imgPFP"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/textPFP"
                    app:srcCompat="@drawable/ic_menu_user" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3" />
            </TableRow>

            <TableRow
                android:id="@+id/TRName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/labelName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_name" />

                <EditText
                    android:id="@+id/etFName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/text_name_first"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etLName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/text_name_last"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow
                android:id="@+id/TREmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/labelEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_email"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvEmail"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelAddress" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/text_email"
                    app:layout_constraintBottom_toBottomOf="@+id/labelEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/labelEmail" />

            </TableRow>

            <TableRow
                android:id="@+id/TRPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/labelPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_phone" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:hint="@string/text_phone"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName|text|phone"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:id="@+id/TRAddress_Street"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/labelAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_address"
                    app:layout_constraintBottom_toTopOf="@+id/labelEmail"
                    app:layout_constraintEnd_toStartOf="@+id/etAddressStreet"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelCompanyName" />

                <EditText
                    android:id="@+id/etAddressStreet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:hint="@string/text_address_street"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow
                android:id="@+id/TRAddress_Street2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/etAddressStreet2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:hint="@string/text_address_street2"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:id="@+id/TRAddress_City"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/etAddressCity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:hint="@string/text_address_city"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:id="@+id/TRAddress_State"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/etAddressState"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/text_address_state"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etAddressZip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/text_address_zip"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow
                android:id="@+id/TRAddress_Zip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:id="@+id/TRCompany"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/labelCompanyName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_company_name"
                    app:layout_constraintBottom_toTopOf="@+id/labelAddress"
                    app:layout_constraintEnd_toStartOf="@+id/tvCompanyName"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelName" />

                <TextView
                    android:id="@+id/tvCompanyName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/text_company_name"
                    app:layout_constraintBottom_toBottomOf="@+id/labelCompanyName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/labelCompanyName" />
            </TableRow>

            <TableRow
                android:id="@+id/TRPoints"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/labelPoints"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_points" />

                <TextView
                    android:id="@+id/tvPoints"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/text_points"
                    tools:layout_editor_absoluteX="102dp"
                    tools:layout_editor_absoluteY="601dp" />
            </TableRow>

            <TableRow
                android:id="@+id/TRButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/bttnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/bttnSave" />
            </TableRow>

        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>